--- a/.drone.yml
+++ b/.drone.yml
@@ -5,7 +5,7 @@ name: default
 
 steps:
 - name: greeting
-  image: golang:1.12
-  commands:
-  - go build
-  - go test
+  image: hello-world
+#  commands:
+ # - go build
+ # - go test
